--- a/Disj-CC.tex
+++ b/Disj-CC.tex
@@ -273,8 +273,46 @@ So if our protocol just think about the important indexes (the one which has pro
 \begin{equation*}
     \text{CC} = k + n\log^2(n)
 \end{equation*}
-\paragraph{$k = \frac{1}{\alpha}n$:}
-In this case the average player has at least $\frac{n}{k} = \alpha$ zeros.
+\section{$O(k + n\log(n))$-Protocol}
+\begin{claim}
+For $p_1, p_2, ... , p_k \in [0,1]$ \newline
+If
+\begin{equation*}
+    \Pi_{i=1}^{k}p_i \geq \frac{\epsilon}{n}
+\end{equation*}
+We can know that
+\begin{equation*}
+    \Sigma_{i=1}^{k}p_i \geq k\left(\frac{\epsilon}{n}\right)^{1/k}
+\end{equation*}
+\end{claim}
+\begin{proof}
+By lagrange multipliers let us denote a target function 
+\begin{equation*}
+    f(x_1, ... , x_k) = \Sigma_{i=1}^{k}x_i
+\end{equation*}
+A constraint function
+\begin{equation*}
+    g(x_1, ... , x_k) = \Pi_{i=1}^{k}x_i - \frac{\epsilon}{n} 
+\end{equation*}
+Lagrange function
+\begin{equation*}
+    \mathcal{L}(x_1, ... , x_k, \lambda) = \Sigma_{i=1}^{k}x_i - \lambda\left(\Pi_{i=1}^{k}x_i - \frac{\epsilon}{n}  \right)
+\end{equation*}
+\begin{align*}
+    \frac{\partial\mathcal{L}}{\partial x_i} = 1 - \lambda\Pi_{j \neq i}x_j  \\
+    \frac{\partial\mathcal{L}}{\partial \lambda} = \Pi_{i=1}^{k}x_i - \frac{\epsilon}{n}
+\end{align*}
+By (2):
+\begin{align*}
+    \Pi_{i=1}^{k}x_i = \frac{\epsilon}{n} \\
+    1 = \frac{\lambda\frac{\epsilon}{n}}{x_i} \\ 
+    x_i = \lambda\frac{\epsilon}{n} \\
+    \left(\lambda\frac{\epsilon}{n}\right)^k = \frac{\epsilon}{n} \\
+    \lambda = \left(\frac{\epsilon}{n}\right)^{\frac{1}{k} - 1} \\
+    x_i = \left(\frac{\epsilon}{n}\right)^{\frac{1}{k}} \\
+    f_{\text{min}} = k\left(\frac{\epsilon}{n}\right)^{\frac{1}{k}}
+\end{align*}
+\end{proof}
 \section{Extra}
 \paragraph{Binary Distribution}
 Let us consider a specific interesting distribution for $n = 2^{k-1}$. We think of $X_i \subseteq \{0, 1, ... , n-1\} $ \newline
